objects/salesprism__Account_Details__c.object
<CustomObject>
    <customHelpPage>salesprism__salesPRISM_Help_Page</customHelpPage>
    <fields>
        <fullName>salesprism__Account_ID__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>salesPRISM Account Details</relationshipLabel>
        <relationshipName>salesPRISM_Account_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>salesprism__Alert_Count__c</fullName>
        <label># Alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>salesprism__Alert_Text__c</fullName>
        <label>What’s New</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesprism__Engagement_Opportunities__c</fullName>
        <label># Engagement Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>salesprism__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>salesprism__Likelihood__c</fullName>
        <label>Best Likelihood</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesprism__Play_Count__c</fullName>
        <label># Plays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>salesprism__Potential_New_Contacts__c</fullName>
        <label>Potential New Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>salesprism__Total_Potential_Revenue__c</fullName>
        <label>Total Potential Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>salesprism__Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>salesPRISM Account Details</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>salesPRISM Account Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>